--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 name: Kezhen Yan/ Haoliang You
 location: University of Pennsylvania
-company: ESE 519
+company: TEAM DINGZHEN
 position: Electronic Piano
 github: https://github.com/akiyamask
 email: kezhen@seas.upenn.edu
